[workspace]
resolver = "2"
members = [
    "discriminant-derive",
    "discriminant-rs"
]

[workspace.package]
authors = ["Miyamizu Mitsuha"]
description = "Convert enum to integer type"
readme = "README.md"
repository = "https://github.com/MMitsuha/discriminant"
edition = "2024"
keywords = ["no_std", "macro", "serde", "encoding", "enum"]
license-file = "LICENSE"
