[package]
version = "0.1.0"
name = "discriminant-derive"
authors.workspace = true
description.workspace = true
readme.workspace = true
edition = "2024"
repository.workspace = true
license-file.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0.99"
quote = "1.0.39"
proc-macro2 = "1.0.94"
