[package]
name = "discriminant-rs"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
edition = "2024"
repository.workspace = true
license-file.workspace = true

[dependencies]
num-traits = "0.2.19"
discriminant-derive = { version = "0.1.0", path = "../discriminant-derive" }
paste = "1.0.15"
