[package]
name = "discriminant"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
edition = "2024"
repository.workspace = true
license-file.workspace = true

[dependencies]
num-traits = "0.2.19"
discriminant-derive = { path = "../discriminant-derive" }
paste = "1.0.15"
